# own_online_stuf

./: README.md  ok.wgsl  some.wgsl
.github/workflows/: rust.yml
NeuNet/: Cargo.toml
NeuNet/src/: main.rs
games/: Cargo.toml
games/initial_state/: Cargo.toml
games/initial_state/src/: main.rs
games/squared_2d/: Cargo.toml
games/squared_2d/src/: main.rs
games/wgpu/examples/skybox/: main.rs
learn-wgpu-master/code/beginner/tutorial1-window/: Cargo.toml
learn-wgpu-master/code/beginner/tutorial2-swapchain/: Cargo.toml
learn-wgpu-master/code/beginner/tutorial3-pipeline/: Cargo.toml
learn-wgpu-master/code/beginner/tutorial4-buffer/: Cargo.toml
learn-wgpu-master/code/beginner/tutorial5-textures/: Cargo.toml
learn-wgpu-master/code/beginner/tutorial6-uniforms/: Cargo.toml
learn-wgpu-master/code/beginner/tutorial7-instancing/: Cargo.toml
learn-wgpu-master/code/beginner/tutorial8-depth/: Cargo.toml
learn-wgpu-master/code/beginner/tutorial9-models/: Cargo.toml
learn-wgpu-master/code/showcase/alignment/: Cargo.toml
learn-wgpu-master/code/showcase/compute/: Cargo.toml
learn-wgpu-master/code/showcase/framework/: Cargo.toml
learn-wgpu-master/code/showcase/gifs/: Cargo.toml
learn-wgpu-master/code/showcase/imgui-demo/: Cargo.toml
lmve/: Cargo.toml
lmve/src/: main.rs
smooth/: Cargo.toml
smooth/src/: main.rs
somear/: Cargo.toml
somear/src/: main.rs
test/src/: main.rs
wgsl-playground-main/: Cargo.toml
wgsl-playground-main/src/: main.rs
winit-master/src/: window.rs
zae/: Cargo.toml
(+19 files in other folders)
