[package]
name = "lmve"
version = "0.1.0"
edition = "2018"
resolver ="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
wgpu =  { version = "0.10.1", features = ['default', 'naga'] }
bytemuck = { version = "1.7.2", features = ["derive"] }
clap = "3.0.0-beta.5"
futures = "0.3.16"
notify = "4.0.17"
wgpu-subscriber = "0.1.0"