[package]
name = "squared_2d"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
wgpu =  { version = "*", features = ['default', 'naga'] }
bytemuck = { version = "1.7.2", features = ["derive"] }
clap = "*"
futures = "0.3.16"
notify = "4.0.17"
wgpu-subscriber = "0.1.0"